Edit icon issue disappearing on word wrap resolved and minor padding adjustment for Deliverable title

--- a/app/react/components/Deliverable/index.css
+++ b/app/react/components/Deliverable/index.css
@@ -37,7 +37,7 @@
 
 .titleContainer {
   composes: hover-container from '../../styles/modules/hover.css';
-  padding: 5px 5px 0px 10px;
+  padding: 5px 5px 5px 10px;
   margin: 10px;
 }
 
